--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,10 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recipe</title>
+    <title>Recept - Lasagne</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
-    <a href="../index.html">Home</a>
+    <h1>Lasagne</h1>
+    <a href="../index.html">Hem</a>
+    <br />
+    <img
+      src="../img/lasagna.avif"
+      width="400"
+      alt="Lasagne enligt receptet nedan."
+    />
+    <h2>Beskrivning</h2>
+    <p>
+      Klassisk lasagne är väl en rätt man aldrig tröttnar på? Med det här
+      receptet blir din lasagne perfekt med en mjuk och härlig konsistens och
+      dessutom har den en ljuv och exemplarisk smak. Parmesanosten är pricken
+      över i!
+    </p>
+    <h2>Ingredienser</h2>
+    <ul>
+      <li>2 gula lökar</li>
+      <li>2 vitlöksklyftor</li>
+      <li>500 g nötfärs</li>
+      <li>1 msk olja</li>
+      <li>4 msk tomatpuré</li>
+      <li>1 tsk torkad timjan</li>
+      <li>1 tsk torkad rosmarin</li>
+      <li>390 g krossade tomater</li>
+      <li>1 Knorr köttbuljongtärning</li>
+      <li>salt</li>
+      <li>peppar</li>
+      <li>9 torkade lasagneplattor</li>
+    </ul>
+    <h3>Sås</h3>
+    <ul>
+      <li>6 msk smör (6 msk motsvarar ca 90 g)</li>
+      <li>6 msk vetemjöl</li>
+      <li>10 dl mjölk</li>
+      <li>2 dl riven parmesan</li>
+    </ul>
+    <h3>Till servering</h3>
+    <ul>
+      <li>Sallad</li>
+    </ul>
+    <h2>Gör så här</h2>
+    <ol>
+      <li>Sätt ugnen på 175°C.</li>
+
+      <li>
+        Skala och hacka lök och vitlök. Fräs färs, lök och vitlök i oljan i en
+        stekpanna. Tillsätt tomatpuré som får fräsa med i färsen. Krydda med
+        timjan och rosmarin. Tillsätt krossade tomater och buljongtärning låt
+        det koka ca 10 minuter. Smaka av med salt och peppar.
+      </li>
+
+      <li>
+        Sås: Smält smöret och rör ner mjölet. Späd med mjölken under vispning.
+        Låt såsen koka ca 5 minuter, rör då och då. Rör ner parmesanosten och
+        smaka av med salt och peppar.
+      </li>
+
+      <li>
+        Varva sås, lasagneplattor och köttfärssåsen i en ugnssäker form (ca 20 x
+        30 cm). Avsluta med ostsåsen.
+      </li>
+
+      <li>
+        Sätt in lasagnen mitt i ugnen ca 40 minuter. (Eller tiden enligt
+        förpackningen på lasagneplattorna.)
+      </li>
+
+      <li>Till servering: Servera lasagnen med en enkel sallad.</li>
+    </ol>
   </body>
 </html>
