--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Odin Recipes</title>
+    <title>Recept</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <h1>Recept</h1>
+    <ul>
+      <li><a href="./recipes/carbonara.html">Carbonara</a></li>
+      <li><a href="./recipes/lasagna.html">Lasagne</a></li>
+      <li>
+        <a href="./recipes/pasta-makrill.html">Pasta med makrill i tomatsås</a>
+      </li>
+    </ul>
   </body>
 </html>
