Added some basic styling and theme support.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="warm">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Recept</title>
   </head>
   <body>
     <h1>Recept</h1>
-    <ul>
+    <ul class="nav">
       <li><a href="./recipes/carbonara.html">Carbonara</a></li>
       <li><a href="./recipes/lasagna.html">Lasagne</a></li>
       <li>
